--- a/trainer/src/app/workout/workout.html
+++ b/trainer/src/app/workout/workout.html
@@ -1,11 +1,23 @@
  <h1 class="text-center">{{currentExercise.exercise.title}}</h1>
  <div class="row pt-4">
   <div id="description-panel" class="col-sm-3">
-     <label>Current Exercise: {{ currentExercise.exercise | json }}</label>
+
 	 <exercise-description [description]="currentExercise.exercise.description" [steps]="currentExercise.exercise.procedure"></exercise-description>
     </div>
  </div>
  
+  <h1 class="text-center">{{currentExercise.exercise.title}}</h1>
+    <div class="image-container row">
+      <img class="img-fluid col-sm" [src]="'/assets/images/' + currentExercise.exercise.image" />
+    </div>
+ 
    <div id="video-panel" class="col-sm-3">
     <abe-video-player [videos]="currentExercise.exercise.videos"></abe-video-player>
   </div>
+  
+   <h1>Time Remaining: {{currentExercise.duration-exerciseRunningDuration}}</h1>
+   <div class="progress time-progress row">
+      <div class="progress-bar" role="progressbar" [attr.aria-valuenow]="exerciseRunningDuration" aria-valuemin="0" [attr.aria-valuemax]="currentExercise.duration"
+        [ngStyle]="{'width':(exerciseRunningDuration/currentExercise.duration) * 100 + '%'}">
+      </div>
+    </div>
