--- a/trainer/src/app/workout/exercise-description/exercise.description.component.html
+++ b/trainer/src/app/workout/exercise-description/exercise.description.component.html
@@ -13,9 +13,12 @@
       Steps
     </h4>
     <div class="card-body">
-      <div class="card-text">
-        {{steps}}
+      <div class="card-text" [innerHtml]="steps">
+        
       </div>
+	 
+
     </div>
   </div>
+ 	
 </div>
